Add Context Navigation

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -36,5 +36,8 @@
   <div class="invisible">
     {{ .TableOfContents }}
   </div>
+  <div id="context-navigation">
+    <a><i class="fas fa-angle-up"></i></a>
+  </div>
   {{ .Content }}
 {{ end }}
