Remove headings preceding table of contents

--- a/layouts/shortcodes/table-of-contents.html
+++ b/layouts/shortcodes/table-of-contents.html
@@ -5,6 +5,16 @@
       const node = document.querySelector('#table-of-contents')
       node.replaceWith(tableOfContents)
     }
+    const content = document.querySelector('#content')
+    const headings = content.querySelectorAll('h1[id], h2[id], h3[id], h4[id]')
+    for (const heading of headings) {
+      if (tableOfContents.compareDocumentPosition(heading) === Node.DOCUMENT_POSITION_PRECEDING) {
+        const item = tableOfContents.querySelector(`[href="#${heading.id}"]`)
+        if (item) {
+          item.parentElement.remove()
+        }
+      }
+    }
   }
   document.addEventListener('DOMContentLoaded', DOMContentLoaded)
 </script>
