--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,8 @@
 <head>
   <meta charset="utf-8">
+  <!-- Responsive viewport meta tag for mobiles -->
+  <!-- https://developer.mozilla.org/en-US/docs/Mozilla/Mobile/Viewport_meta_tag -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Title and description -->
   <title>{{ .Title }} – {{ .Site.Title }}</title>
   {{ with .Description }}
