Update page title

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,7 +4,7 @@
   <!-- https://developer.mozilla.org/en-US/docs/Mozilla/Mobile/Viewport_meta_tag -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Title and description -->
-  <title>{{ .Title }} – {{ .Site.Title }}</title>
+  <title>{{ .Title }} · {{ .Site.Title }}</title>
   {{ with .Description }}
     <meta name="description" content="{{ . }}">
   {{ end }}
