Show table of contents title

--- a/layouts/shortcodes/table-of-contents.html
+++ b/layouts/shortcodes/table-of-contents.html
@@ -19,4 +19,5 @@
   document.addEventListener('DOMContentLoaded', DOMContentLoaded)
 </script>
 
+<h2>Table of Contents</h2>
 <div id="table-of-contents"></div>
