Update Font Awesome
<script src="https://kit.fontawesome.com/b030fd7e2d.js" crossorigin="anonymous"></script>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,7 +21,7 @@
     <script src="{{ . | relURL }}"></script>
   {{ end }}
   <!-- Font Awesome -->
-  <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/b030fd7e2d.js" crossorigin="anonymous"></script>
   <!-- Moment -->
   <script src="https://momentjs.com/downloads/moment.js"></script>
   <!-- Highlight -->
