Rename “Favorite icon” → “Favicon”

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,7 +8,7 @@
   {{ with .Description }}
     <meta name="description" content="{{ . }}">
   {{ end }}
-  <!-- Favorite icon -->
+  <!-- Favicon -->
   {{ with .Site.Params.Icon }}
     <link href="{{ . | relURL }}" rel="icon">
   {{ end }}
